deploy/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-site
  namespace: main-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-site
  template:
    metadata:
      labels:
        app: main-site
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
        - name: main-site
          image: steeltoe.azurecr.io/main-site
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
