deploy/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: main-site-service
  namespace: main-site
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: main-site
