deploy/kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main-site-ingress
  namespace: main-site
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dev.steeltoe.io
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              serviceName: main-site-service
              servicePort: 80
