deploy/kubernetes/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-site
  namespace: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-site
  template:
    metadata:
      labels:
        app: main-site
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
        - name: main-site
          image: steeltoe.azurecr.io/main-site
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: main-site
  namespace: website
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: main-site
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-site
  namespace: website
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: steeltoe.io
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: main-site
                port:
                  number: 80
